experimental/learning-stacks/full-stack-hourly-3nic-bigip.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "AWS CloudFormation Template for creating a full stack with a 3nic BIG-IP, a 1 Availability Zone VPC, subnets, security groups and a webeserver (Bitnami LAMP stack with username bitnami **WARNING** This template creates Amazon EC2 Instances. You will be billed for the AWS resources used if you create a stack from this template.",
    "Mappings": {
        "BigipRegionMap": {
            "ap-northeast-1": {
                "Best1000Mbps": "ami-b700d1d6",
                "Best200Mbps": "ami-9a1ecffb",
                "Best25Mbps": "ami-8300d1e2",
                "Better1000Mbps": "ami-2c05d44d",
                "Better200Mbps": "ami-5802d339",
                "Better25Mbps": "ami-e602d387",
                "Good1000Mbps": "ami-df03d2be",
                "Good200Mbps": "ami-5604d537",
                "Good25Mbps": "ami-9503d2f4"
            },
            "ap-southeast-1": {
                "Best1000Mbps": "ami-844298e7",
                "Best200Mbps": "ami-6d419b0e",
                "Best25Mbps": "ami-07409a64",
                "Better1000Mbps": "ami-05409a66",
                "Better200Mbps": "ami-50439933",
                "Better25Mbps": "ami-c4419ba7",
                "Good1000Mbps": "ami-d4419bb7",
                "Good200Mbps": "ami-db419bb8",
                "Good25Mbps": "ami-f4439997"
            },
            "ap-southeast-2": {
                "Best1000Mbps": "ami-6789b804",
                "Best200Mbps": "ami-6389b800",
                "Best25Mbps": "ami-7989b81a",
                "Better1000Mbps": "ami-8d89b8ee",
                "Better200Mbps": "ami-ac88b9cf",
                "Better25Mbps": "ami-388bba5b",
                "Good1000Mbps": "ami-358bba56",
                "Good200Mbps": "ami-0c86b76f",
                "Good25Mbps": "ami-0287b661"
            },
            "eu-central-1": {
                "Best1000Mbps": "ami-9cb449f3",
                "Best200Mbps": "ami-68b04d07",
                "Best25Mbps": "ami-deb64bb1",
                "Better1000Mbps": "ami-20b64b4f",
                "Better200Mbps": "ami-16b14c79",
                "Better25Mbps": "ami-86b548e9",
                "Good1000Mbps": "ami-30b14c5f",
                "Good200Mbps": "ami-0fb44960",
                "Good25Mbps": "ami-d2b64bbd"
            },
            "eu-west-1": {
                "Best1000Mbps": "ami-77c4bd04",
                "Best200Mbps": "ami-a93840da",
                "Best25Mbps": "ami-41c6bf32",
                "Better1000Mbps": "ami-5ec7be2d",
                "Better200Mbps": "ami-03c3ba70",
                "Better25Mbps": "ami-e0384093",
                "Good1000Mbps": "ami-a1c5bcd2",
                "Good200Mbps": "ami-2dc5bc5e",
                "Good25Mbps": "ami-27c5bc54"
            },
            "sa-east-1": {
                "Best1000Mbps": "ami-cdc251a1",
                "Best200Mbps": "ami-cbdd4ea7",
                "Best25Mbps": "ami-7ec25112",
                "Better1000Mbps": "ami-ffdc4f93",
                "Better200Mbps": "ami-7ec75412",
                "Better25Mbps": "ami-a2c152ce",
                "Good1000Mbps": "ami-97dd4efb",
                "Good200Mbps": "ami-adc152c1",
                "Good25Mbps": "ami-27c0534b"
            },
            "us-east-1": {
                "Best1000Mbps": "ami-a1c8b5b6",
                "Best200Mbps": "ami-64ceb373",
                "Best25Mbps": "ami-b5ceb3a2",
                "Better1000Mbps": "ami-69d2af7e",
                "Better200Mbps": "ami-64ccb173",
                "Better25Mbps": "ami-bdcab7aa",
                "Good1000Mbps": "ami-7dcdb06a",
                "Good200Mbps": "ami-78cdb06f",
                "Good25Mbps": "ami-a9cfb2be"
            },
            "us-west-1": {
                "Best1000Mbps": "ami-4f7a352f",
                "Best200Mbps": "ami-5c7b343c",
                "Best25Mbps": "ami-997a35f9",
                "Better1000Mbps": "ami-da7b34ba",
                "Better200Mbps": "ami-767e3116",
                "Better25Mbps": "ami-8c7b34ec",
                "Good1000Mbps": "ami-4d7b342d",
                "Good200Mbps": "ami-747e3114",
                "Good25Mbps": "ami-987a35f8"
            },
            "us-west-2": {
                "Best1000Mbps": "ami-4775a727",
                "Best200Mbps": "ami-9d74a6fd",
                "Best25Mbps": "ami-8c77a5ec",
                "Better1000Mbps": "ami-a873a1c8",
                "Better200Mbps": "ami-d875a7b8",
                "Better25Mbps": "ami-677ba907",
                "Good1000Mbps": "ami-e94d9f89",
                "Good200Mbps": "ami-1e7aa87e",
                "Good25Mbps": "ami-3e70a25e"
            }
        },
        "WebserverRegionMap": {
            "ap-northeast-1": {
                "AMI": "ami-5b82503a"
            },
            "ap-southeast-1": {
                "AMI": "ami-2e67c24d"
            },
            "ap-southeast-2": {
                "AMI": "ami-3af5c559"
            },
            "eu-central-1": {
                "AMI": "ami-f8768b97"
            },
            "eu-west-1": {
                "AMI": "ami-9c5f25ef"
            },
            "sa-east-1": {
                "AMI": "ami-6a52c106"
            },
            "us-east-1": {
                "AMI": "ami-93fa8284"
            },
            "us-west-1": {
                "AMI": "ami-5f1b553f"
            },
            "us-west-2": {
                "AMI": "ami-c1e13da1"
            }
        }
    },
    "Outputs": {
        "Az1ApplicationSubnet": {
            "Description": "Az1Application Subnet Id",
            "Value": {
                "Ref": "Az1ApplicationSubnet"
            }
        },
        "Bigip1ExternalInterfacePrivateIp": {
            "Description": "Internally routable Ip of public interface on BIG-IP",
            "Value": {
                "Fn::GetAtt": [
                    "Bigip1subnet1Az1Interface",
                    "PrimaryPrivateIpAddress"
                ]
            }
        },
        "Bigip1InstanceId": {
            "Description": "Instance Id of Big-IP in Amazon",
            "Value": {
                "Ref": "Bigip1Instance"
            }
        },
        "Bigip1InternalInterface": {
            "Description": "Internal interface ID on BIG-IP",
            "Value": {
                "Ref": "Bigip1InternalInterface"
            }
        },
        "Bigip1InternalInterfacePrivateIp": {
            "Description": "Internally routable IP of internal interface on BIG-IP",
            "Value": {
                "Fn::GetAtt": [
                    "Bigip1InternalInterface",
                    "PrimaryPrivateIpAddress"
                ]
            }
        },
        "Bigip1ManagementEipAddress": {
            "Description": "Ip address of management port on BIG-IP",
            "Value": {
                "Ref": "Bigip1ManagementEipAddress"
            }
        },
        "Bigip1ManagementInterface": {
            "Description": "Management interface Id on BIG-IP",
            "Value": {
                "Ref": "Bigip1ManagementInterface"
            }
        },
        "Bigip1ManagementInterfacePrivateIp": {
            "Description": "Internally routable Ip of management interface on BIG-IP",
            "Value": {
                "Fn::GetAtt": [
                    "Bigip1ManagementInterface",
                    "PrimaryPrivateIpAddress"
                ]
            }
        },
        "Bigip1Url": {
            "Description": "Big-IP Management GUI",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "https://",
                        {
                            "Fn::GetAtt": [
                                "Bigip1Instance",
                                "PublicIp"
                            ]
                        }
                    ]
                ]
            }
        },
        "Bigip1VipEipAddress": {
            "Description": "EIP address for VIP",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "http://",
                        {
                            "Ref": "Bigip1VipEipAddress"
                        },
                        ":80"
                    ]
                ]
            }
        },
        "Bigip1VipPrivateIp": {
            "Description": "VIP on External Interface Secondary IP 1",
            "Value": {
                "Fn::Select": [
                    "0",
                    {
                        "Fn::GetAtt": [
                            "Bigip1subnet1Az1Interface",
                            "SecondaryPrivateIpAddresses"
                        ]
                    }
                ]
            }
        },
        "Bigip1subnet1Az1Interface": {
            "Description": "External interface Id on Big-IP",
            "Value": {
                "Ref": "Bigip1subnet1Az1Interface"
            }
        },
        "Bigip1subnet1Az1SelfEipAddress": {
            "Description": "IP Address of External interface attached to BIG-IP",
            "Value": {
                "Ref": "Bigip1subnet1Az1SelfEipAddress"
            }
        },
        "DnsServers": {
            "Description": "DNS server for VPC",
            "Value": "10.0.0.2"
        },
        "Vpc": {
            "Description": "VPC ID",
            "Value": {
                "Ref": "Vpc"
            }
        },
        "WebserverPublicIp": {
            "Description": "Public Ip for Webserver",
            "Value": {
                "Fn::GetAtt": [
                    "Webserver",
                    "PublicIp"
                ]
            }
        },
        "WebserverPublicUrl": {
            "Description": "Public Url for Webserver",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "http://",
                        {
                            "Fn::GetAtt": [
                                "Webserver",
                                "PublicIp"
                            ]
                        }
                    ]
                ]
            }
        },
        "availabilityZone1": {
            "Description": "Availability Zone",
            "Value": {
                "Fn::GetAtt": [
                    "Bigip1Instance",
                    "AvailabilityZone"
                ]
            }
        },
        "bigipExternalSecurityGroup": {
            "Description": "Public or External Security Group",
            "Value": {
                "Ref": "bigipExternalSecurityGroup"
            }
        },
        "bigipInternalSecurityGroup": {
            "Description": "Private or Internal Security Group",
            "Value": {
                "Ref": "bigipInternalSecurityGroup"
            }
        },
        "bigipManagementSecurityGroup": {
            "Description": "Management Security Group",
            "Value": {
                "Ref": "bigipManagementSecurityGroup"
            }
        },
        "managementSubnetAz1": {
            "Description": "Az1Management Subnet Id",
            "Value": {
                "Ref": "managementSubnetAz1"
            }
        },
        "subnet1Az1": {
            "Description": "Az1External Subnet Id",
            "Value": {
                "Ref": "subnet1Az1"
            }
        },
        "subnet2Az1": {
            "Description": "Az1Internal Subnet Id",
            "Value": {
                "Ref": "subnet2Az1"
            }
        },
        "webserverPrivateIp": {
            "Description": "Private Ip for Webserver",
            "Value": {
                "Fn::GetAtt": [
                    "Webserver",
                    "PrivateIp"
                ]
            }
        }
    },
    "Parameters": {
        "adminPassword": {
            "ConstraintDescription": "Please verify your BIG-IP Admin Password",
            "Description": "Please enter your BIG-IP Admin Password",
            "MaxLength": "255",
            "MinLength": "1",
            "NoEcho": true,
            "Type": "String"
        },
        "adminUsername": {
            "ConstraintDescription": "Please verify your BIG-IP Admin Username",
            "Default": "admin",
            "Description": "Please enter your BIG-IP Admin Username",
            "MaxLength": "255",
            "MinLength": "1",
            "Type": "String"
        },
        "applicationInstanceType": {
            "AllowedValues": [
                "t1.micro",
                "m3.medium",
                "m3.xlarge",
                "m2.xlarge",
                "m3.2xlarge",
                "c3.large",
                "c3.xlarge"
            ],
            "ConstraintDescription": "must be a valid EC2 instance type",
            "Default": "t1.micro",
            "Description": "Webserver EC2 instance type",
            "Type": "String"
        },
        "availabilityZone1": {
            "Description": "Name of an Availability Zone in this Region",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "imageName": {
            "AllowedValues": [
                "Good25Mbps",
                "Good200Mbps",
                "Good1000Mbps",
                "Better25Mbps",
                "Better200Mbps",
                "Better1000Mbps",
                "Best25Mbps",
                "Best200Mbps",
                "Best1000Mbps"
            ],
            "ConstraintDescription": "Must be a valid F5 Big-IP performance type",
            "Default": "Best1000Mbps",
            "Description": "F5 Bigip Performance Type",
            "Type": "String"
        },
        "instanceType": {
            "AllowedValues": [
                "t2.medium",
                "t2.large",
                "m3.xlarge",
                "m3.2xlarge",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m4.10xlarge",
                "c3.2xlarge",
                "c3.4xlarge",
                "c3.8xlarge",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge"
            ],
            "ConstraintDescription": "must be a valid Big-IP EC2 instance type",
            "Default": "m3.xlarge",
            "Description": "F5 BIG-IP Virtual Instance Type",
            "Type": "String"
        },
        "restrictedSrcAddress": {
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.",
            "Default": "0.0.0.0/0",
            "Description": " The IP address range that can be used to SSH to the EC2 instances",
            "MaxLength": "18",
            "MinLength": "9",
            "Type": "String"
        },
        "sshKey": {
            "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
            "Type": "AWS::EC2::KeyPair::KeyName"
        }
    },
    "Resources": {
        "ApplicationDefaultRoute": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "ApplicationRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "ApplicationRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Application Route Table"
                    },
                    {
                        "Key": "Network",
                        "Value": "Application"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "AttachGateway": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "Az1ApplicationSubnet": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "availabilityZone1"
                },
                "CidrBlock": "10.0.3.0/24",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Az1 Application Subnet"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "Az1ApplicationSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ApplicationRouteTable"
                },
                "SubnetId": {
                    "Ref": "Az1ApplicationSubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "Az1ExternalSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ExternalRouteTable"
                },
                "SubnetId": {
                    "Ref": "subnet1Az1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "Az1InternalSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "InternalRouteTable"
                },
                "SubnetId": {
                    "Ref": "subnet2Az1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "Az1ManagementSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ManagementRouteTable"
                },
                "SubnetId": {
                    "Ref": "managementSubnetAz1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "Bigip1Instance": {
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "config": {
                        "commands": {
                            "001-onboard-BIG-IP": {
                                "command": {
                                    "Fn::Join": [
                                        " ",
                                        [
                                            "NAME_SERVER=`/shared/f5-cloud-libs/scripts/aws/getNameServer.sh eth1`;",
                                            "f5-rest-node /shared/f5-cloud-libs/scripts/onboard.js",
                                            "--log-level verbose",
                                            "-o  /var/log/onboard.log",
                                            "--background",
                                            "--no-reboot",
                                            "--host localhost",
                                            "--user admin",
                                            "--password '",
                                            {
                                                "Ref": "adminPassword"
                                            },
                                            "'",
                                            "--set-password admin:'",
                                            {
                                                "Ref": "adminPassword"
                                            },
                                            "'",
                                            "--hostname `curl http://169.254.169.254/latest/meta-data/hostname`",
                                            "--ntp 0.us.pool.ntp.org",
                                            "--ntp 1.us.pool.ntp.org",
                                            "--tz UTC",
                                            "--dns ${NAME_SERVER}",
                                            "--module ltm:nominal"
                                        ]
                                    ]
                                }
                            },
                            "firstrun-BIG-IP": {
                                "command": {
                                    "Fn::Join": [
                                        " ",
                                        [
                                            "f5-rest-node /shared/f5-cloud-libs/scripts/runScript.js",
                                            "--wait-for ONBOARD_DONE",
                                            "--file /tmp/firstrun.sh",
                                            "--log-level verbose",
                                            "-o /var/log/firstrun_1.log",
                                            "--background"
                                        ]
                                    ]
                                }
                            }
                        },
                        "files": {
                            "/tmp/firstrun.config": {
                                "content": {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "#!/bin/bash\n",
                                            "HOSTNAME=`curl http://169.254.169.254/latest/meta-data/hostname`\n",
                                            "TZ='UTC'\n",
                                            "BIGIP_ADMIN_USERNAME='",
                                            {
                                                "Ref": "adminUsername"
                                            },
                                            "'\n",
                                            "BIGIP_ADMIN_PASSWORD='",
                                            {
                                                "Ref": "adminPassword"
                                            },
                                            "'\n",
                                            "GATEWAY_MAC=`ifconfig eth1 | egrep HWaddr | awk '{print tolower($5)}'`\n",
                                            "GATEWAY_CIDR_BLOCK=`curl http://169.254.169.254/latest/meta-data/network/interfaces/macs/${GATEWAY_MAC}/subnet-ipv4-cidr-block`\n",
                                            "GATEWAY_NET=${GATEWAY_CIDR_BLOCK%/*}\n",
                                            "GATEWAY_PREFIX=${GATEWAY_CIDR_BLOCK#*/}\n",
                                            "GATEWAY=`echo ${GATEWAY_NET} | awk -F. '{ print $1\".\"$2\".\"$3\".\"$4+1 }'`\n",
                                            "VPC_CIDR_BLOCK=`curl http://169.254.169.254/latest/meta-data/network/interfaces/macs/${GATEWAY_MAC}/vpc-ipv4-cidr-block`\n",
                                            "VPC_NET=${VPC_CIDR_BLOCK%/*}\n",
                                            "VPC_PREFIX=${VPC_CIDR_BLOCK#*/}\n",
                                            "NAME_SERVER=`echo ${VPC_NET} | awk -F. '{ print $1\".\"$2\".\"$3\".\"$4+2 }'`\n",
                                            "MGMTIP='",
                                            {
                                                "Fn::GetAtt": [
                                                    "Bigip1ManagementInterface",
                                                    "PrimaryPrivateIpAddress"
                                                ]
                                            },
                                            "'\n",
                                            "EXTIP='",
                                            {
                                                "Fn::GetAtt": [
                                                    "Bigip1subnet1Az1Interface",
                                                    "PrimaryPrivateIpAddress"
                                                ]
                                            },
                                            "'\n",
                                            "EXTPRIVIP='",
                                            {
                                                "Fn::Select": [
                                                    "0",
                                                    {
                                                        "Fn::GetAtt": [
                                                            "Bigip1subnet1Az1Interface",
                                                            "SecondaryPrivateIpAddresses"
                                                        ]
                                                    }
                                                ]
                                            },
                                            "'\n",
                                            "EXTMASK='24'\n",
                                            "INTIP='",
                                            {
                                                "Fn::GetAtt": [
                                                    "Bigip1InternalInterface",
                                                    "PrimaryPrivateIpAddress"
                                                ]
                                            },
                                            "'\n",
                                            "INTMASK='24'\n",
                                            "POOLMEM='",
                                            {
                                                "Fn::GetAtt": [
                                                    "Webserver",
                                                    "PrivateIp"
                                                ]
                                            },
                                            "'\n",
                                            "POOLMEMPORT=80\n",
                                            "APPNAME='demo-app-1'\n",
                                            "VIRTUALSERVERPORT=80\n",
                                            "CRT='default.crt'\n",
                                            "KEY='default.key'\n"
                                        ]
                                    ]
                                },
                                "group": "root",
                                "mode": "000755",
                                "owner": "root"
                            },
                            "/tmp/firstrun.sh": {
                                "content": {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "#!/bin/bash\n",
                                            ". /tmp/firstrun.config\n",
                                            ". /tmp/firstrun.utils\n",
                                            "FILE=/tmp/firstrun.log\n",
                                            "if [ ! -e $FILE ]\n",
                                            " then\n",
                                            "     touch $FILE\n",
                                            "     nohup $0 0<&- &>/dev/null &\n",
                                            "     exit\n",
                                            "fi\n",
                                            "exec 1<&-\n",
                                            "exec 2<&-\n",
                                            "exec 1<>$FILE\n",
                                            "exec 2>&1\n",
                                            "date\n",
                                            "echo 'starting tmsh config'\n",
                                            "tmsh create net vlan external interfaces add { 1.1 } \n",
                                            "tmsh create net self ${EXTIP}/${EXTMASK} vlan external allow-service add { tcp:4353 }\n",
                                            "tmsh create net vlan internal interfaces add { 1.2 } \n",
                                            "tmsh create net self ${INTIP}/${INTMASK} vlan internal allow-service default\n",
                                            "tmsh create net route default gw ${GATEWAY}\n",
                                            "tmsh save /sys config\n",
                                            "checkStatusnoret\n",
                                            "sleep 20 \n",
                                            "tmsh save /sys config\n",
                                            "tmsh create ltm pool ${APPNAME}-pool members add { ${POOLMEM}:${POOLMEMPORT} } monitor http\n",
                                            "tmsh create ltm policy uri-routing-policy controls add { forwarding } requires add { http } strategy first-match legacy\n",
                                            "tmsh modify ltm policy uri-routing-policy rules add { service1.example.com { conditions add { 0 { http-uri host values { service1.example.com } } } actions add { 0 { forward select pool ${APPNAME}-pool } } ordinal 1 } }\n",
                                            "tmsh modify ltm policy uri-routing-policy rules add { service2.example.com { conditions add { 0 { http-uri host values { service2.example.com } } } actions add { 0 { forward select pool ${APPNAME}-pool } } ordinal 2 } }\n",
                                            "tmsh modify ltm policy uri-routing-policy rules add { apiv2 { conditions add { 0 { http-uri path starts-with values { /apiv2 } } } actions add { 0 { forward select pool ${APPNAME}-pool } } ordinal 3 } }\n",
                                            "tmsh create ltm virtual /Common/${APPNAME}-${VIRTUALSERVERPORT} { destination ${EXTPRIVIP}:${VIRTUALSERVERPORT} mask 255.255.255.255 ip-protocol tcp pool /Common/${APPNAME}-pool policies replace-all-with { uri-routing-policy { } } profiles replace-all-with { tcp { } http { } }  source 0.0.0.0/0 source-address-translation { type automap } translate-address enabled translate-port enabled }\n",
                                            "tmsh save /sys config\n",
                                            "date\n",
                                            "# remove_license_from_bigiq.sh uses firstrun.config but for security purposes, typically want to remove firstrun.config\n",
                                            "# rm /tmp/firstrun.config\n"
                                        ]
                                    ]
                                },
                                "group": "root",
                                "mode": "000755",
                                "owner": "root"
                            },
                            "/tmp/firstrun.utils": {
                                "group": "root",
                                "mode": "000755",
                                "owner": "root",
                                "source": "http://cdn.f5.com/product/templates/utils/firstrun.utils"
                            }
                        },
                        "sources": {
                            "/shared": "https://f5-cloud-libs.s3.amazonaws.com/f5-cloud-libs.tar.gz"
                        }
                    }
                }
            },
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "BigipRegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        {
                            "Ref": "imageName"
                        }
                    ]
                },
                "InstanceType": {
                    "Ref": "instanceType"
                },
                "KeyName": {
                    "Ref": "sshKey"
                },
                "NetworkInterfaces": [
                    {
                        "Description": "Management Interface",
                        "DeviceIndex": "0",
                        "NetworkInterfaceId": {
                            "Ref": "Bigip1ManagementInterface"
                        }
                    },
                    {
                        "Description": "Public or External Interface",
                        "DeviceIndex": "1",
                        "NetworkInterfaceId": {
                            "Ref": "Bigip1subnet1Az1Interface"
                        }
                    },
                    {
                        "Description": "Private or Internal Interface",
                        "DeviceIndex": "2",
                        "NetworkInterfaceId": {
                            "Ref": "Bigip1InternalInterface"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    "Big-IP: ",
                                    {
                                        "Ref": "AWS::StackName"
                                    }
                                ]
                            ]
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "/opt/aws/apitools/cfn-init-1.4-0.amzn1/bin/cfn-init -v -s ",
                                {
                                    "Ref": "AWS::StackId"
                                },
                                " -r ",
                                "Bigip1Instance",
                                " --region ",
                                {
                                    "Ref": "AWS::Region"
                                },
                                "\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "Bigip1InternalInterface": {
            "Properties": {
                "Description": "Internal Interface for the Bigip",
                "GroupSet": [
                    {
                        "Ref": "bigipInternalSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "subnet2Az1"
                }
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "Bigip1ManagementEipAddress": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "Bigip1ManagementEipAssociation": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Bigip1ManagementEipAddress",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "Bigip1ManagementInterface"
                }
            },
            "Type": "AWS::EC2::EIPAssociation"
        },
        "Bigip1ManagementInterface": {
            "Properties": {
                "Description": "Management Interface for the Bigip",
                "GroupSet": [
                    {
                        "Ref": "bigipManagementSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "managementSubnetAz1"
                }
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "Bigip1VipEipAddress": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "Bigip1VipEipAssociation": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Bigip1VipEipAddress",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "Bigip1subnet1Az1Interface"
                },
                "PrivateIpAddress": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAtt": [
                                "Bigip1subnet1Az1Interface",
                                "SecondaryPrivateIpAddresses"
                            ]
                        }
                    ]
                }
            },
            "Type": "AWS::EC2::EIPAssociation"
        },
        "Bigip1subnet1Az1Interface": {
            "Properties": {
                "Description": "Public External Interface for the Bigip",
                "GroupSet": [
                    {
                        "Ref": "bigipExternalSecurityGroup"
                    }
                ],
                "SecondaryPrivateIpAddressCount": "1",
                "SubnetId": {
                    "Ref": "subnet1Az1"
                }
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "Bigip1subnet1Az1SelfEipAddress": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "Bigip1subnet1Az1SelfEipAssociation": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Bigip1subnet1Az1SelfEipAddress",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "Bigip1subnet1Az1Interface"
                },
                "PrivateIpAddress": {
                    "Fn::GetAtt": [
                        "Bigip1subnet1Az1Interface",
                        "PrimaryPrivateIpAddress"
                    ]
                }
            },
            "Type": "AWS::EC2::EIPAssociation"
        },
        "ExternalDefaultRoute": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "ExternalRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "ExternalRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "External Route Table"
                    },
                    {
                        "Key": "Network",
                        "Value": "External"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "InternalDefaultRoute": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "InternalRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "InternalRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Internal Route Table"
                    },
                    {
                        "Key": "Network",
                        "Value": "Internal"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "InternetGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::InternetGateway"
        },
        "ManagementDefaultRoute": {
            "DependsOn": "AttachGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "ManagementRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "ManagementRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Management Route Table"
                    },
                    {
                        "Key": "Network",
                        "Value": "Mgmt"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "Vpc": {
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        },
        "Webserver": {
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "WebserverRegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "AMI"
                    ]
                },
                "InstanceType": {
                    "Ref": "applicationInstanceType"
                },
                "KeyName": {
                    "Ref": "sshKey"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "Description": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    " Webserver Network Interface"
                                ]
                            ]
                        },
                        "DeviceIndex": "0",
                        "GroupSet": [
                            {
                                "Ref": "WebserverSecurityGroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "Az1ApplicationSubnet"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Webserver"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "\n",
                            [
                                "#cloud-config",
                                "runcmd:",
                                " - sudo docker run --name demo -p 80:80 -d f5devcentral/f5-demo-app:latest"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "WebserverSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enable Access to Webserver",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "-1",
                        "IpProtocol": "icmp",
                        "ToPort": "-1"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Webserver Security Group"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "bigipExternalSecurityGroup": {
            "Properties": {
                "GroupDescription": "Public or External interface rules",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "4353",
                        "IpProtocol": "tcp",
                        "ToPort": "4353"
                    },
                    {
                        "CidrIp": "10.0.0.0/16",
                        "FromPort": "1026",
                        "IpProtocol": "udp",
                        "ToPort": "1026"
                    },
                    {
                        "CidrIp": "10.0.0.0/16",
                        "FromPort": "6123",
                        "IpProtocol": "tcp",
                        "ToPort": "6128"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Bigip External Security Group"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "bigipInternalSecurityGroup": {
            "Properties": {
                "GroupDescription": "Allow All from Intra-VPC only",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "10.0.0.0/16",
                        "FromPort": "-1",
                        "IpProtocol": "-1",
                        "ToPort": "-1"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Bigip Internal Security Group"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "bigipManagementSecurityGroup": {
            "Properties": {
                "GroupDescription": "Big-IP Management UI rules",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "restrictedSrcAddress"
                        },
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": {
                            "Ref": "restrictedSrcAddress"
                        },
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp": {
                            "Ref": "restrictedSrcAddress"
                        },
                        "FromPort": "-1",
                        "IpProtocol": "icmp",
                        "ToPort": "-1"
                    },
                    {
                        "CidrIp": "10.0.0.0/16",
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": "10.0.0.0/16",
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Bigip Management Security Group"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "managementSubnetAz1": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "availabilityZone1"
                },
                "CidrBlock": "10.0.0.0/24",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Az1 Management Subnet"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "subnet1Az1": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "availabilityZone1"
                },
                "CidrBlock": "10.0.1.0/24",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Az1 External Subnet"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "subnet2Az1": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "availabilityZone1"
                },
                "CidrBlock": "10.0.2.0/24",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": "Az1 Internal Subnet"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        }
    }
}
